Added working links for mobile

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <main>
         <div id="container">
             <img id="click" src="images/click.webp">
-            <a href="https://maevehuman.github.io/MyUGPortfolio/" target="_blank" class="letter" id="m">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="m" data-state="close"
+                data-value="https://maevehuman.github.io/MyUGPortfolio/">
+                <div class="letter-inner" data-state="close" data-value="https://maevehuman.github.io/MyUGPortfolio/">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter M, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter M, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter M, top left" />
@@ -44,8 +45,10 @@
                 </div>
             </a>
 
-            <a href="https://diabgarren.github.io/wdd230/bountiful-foods/" target="_blank" class="letter" id="y">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="y" data-state="close"
+                data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
+                <div class="letter-inner" data-state="close"
+                    data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter Y, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter Y, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, top left" />
@@ -53,8 +56,9 @@
                 </div>
             </a>
 
-            <a href="https://diabgarren.github.io/wdd230/chamber" target="_blank" class="letter" id="p">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="p" data-state="close"
+                data-value="https://diabgarren.github.io/wdd230/chamber/">
+                <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/wdd230/chamber/">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter P, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter P, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter P, top left" />
@@ -62,8 +66,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="r">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="r" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter R, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter R, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter R, top left" />
@@ -71,8 +75,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="o">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="o" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter O, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter O, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter O, top left" />
@@ -80,8 +84,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="j">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="j" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter J, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter J, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter J, top left" />
@@ -89,8 +93,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="e">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="e" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter E, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter E, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter E, top left" />
@@ -98,8 +102,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="c">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="c" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter C, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter C, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter C, top left" />
@@ -107,8 +111,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="t">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="t" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter T, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter T, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter T, top left" />
@@ -116,8 +120,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="s">
-                <div class="letter-inner">
+            <a href="#" class="letter" id="s" data-state="close" data-value="">
+                <div class="letter-inner" data-state="close" data-value="">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter S, top left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter S, top left" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter S, top left" />
