--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
     </header>
     <main>
         <div id="container">
-            <img id="click" src="images/click.webp">
+            <!-- <img id="click" src="images/click.webp"> -->
+            <h2 id="click">clicK<br>HeRe<br>---&#8594;</h2>
             <a href="#" class="letter" id="m" data-state="close"
                 data-value="https://maevehuman.github.io/MyUGPortfolio/">
                 <div class="letter-inner" data-state="close" data-value="https://maevehuman.github.io/MyUGPortfolio/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter M, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter M, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter M, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter M, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter M, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter M, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter M, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter M, Bottom Right" />
                 </div>
             </a>
 
@@ -49,95 +50,96 @@
                 data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
                 <div class="letter-inner" data-state="close"
                     data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter Y, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter Y, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter Y, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter Y, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter Y, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter Y, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="p" data-state="close"
                 data-value="https://diabgarren.github.io/wdd230/chamber/">
                 <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/wdd230/chamber/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter P, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter P, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter P, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter P, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter P, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter P, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter P, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter P, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="r" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter R, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter R, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter R, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter R, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter R, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter R, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter R, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter R, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="o" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter O, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter O, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter O, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter O, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter O, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter O, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter O, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter O, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="j" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter J, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter J, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter J, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter J, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter J, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter J, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter J, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter J, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="e" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter E, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter E, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter E, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter E, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter E, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter E, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter E, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter E, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="c" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter C, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter C, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter C, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter C, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter C, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter C, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter C, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter C, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="t" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter T, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter T, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter T, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter T, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter T, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter T, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter T, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter T, Bottom Right" />
                 </div>
             </a>
 
             <a href="#" class="letter" id="s" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter S, top left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter S, top left" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter S, top left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter S, top left" />
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter S, Top Left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter S, Top Right" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter S, Bottom Left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter S, Bottom Right" />
                 </div>
             </a>
 
-            <div id="gap"></div>
+            <!-- <img id="desc" src="images/desc.webp" alt="Projects open in new tab" /> -->
+            <h2 id="desc">*pRojects opeN in New tAb</h2>
         </div>
     </main>
     <footer>
         <div>
-            <p>Garren Diab</p>
-            <p>Phone: <a id="phone" data-value="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></p>
-            <p>Email: <a id="email" data-value="garrendiab@gmail.com"
-                    href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
+            <h2>Garren Diab</h2>
+            <h3>Phone: <a id="phone" data-value="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></h3>
+            <h3>Email: <a id="email" data-value="garrendiab@gmail.com"
+                    href="mailto:garren@gmail.com">garrendiab@gmail.com</a></h3>
         </div>
     </footer>
     <script type="text/javascript" src="./scripts/main.js"></script>
