--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../css/style.css" media="screen" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Major+Mono+Display&display=swap"
+        rel="stylesheet">
     <title>Home</title>
 </head>
 
@@ -39,10 +40,10 @@
     </main>
     <footer>
         <div>
-            <p>Garren Diab</p>
-            <p>Phone: <a id="phone" data-value="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></p>
-            <p>Email: <a id="email" data-value="garrendiab@gmail.com"
-                    href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
+            <h2>Garren Diab</h2>
+            <h3>Phone: <a id="phone" data-value="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></h3>
+            <h3>Email: <a id="email" data-value="garrendiab@gmail.com"
+                    href="mailto:garren@gmail.com">garrendiab@gmail.com</a></h3>
         </div>
     </footer>
     <script type="text/javascript" src="../scripts/main.js"></script>
