--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="r" data-state="close" data-value="">
-                <div class="letter-inner" data-state="close" data-value="">
+            <a href="#" class="letter" id="r" data-state="close" data-value="https://diabgarren.github.io/techtroll/">
+                <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/techtroll/">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter R, Top Left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter R, Top Right" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter R, Bottom Left" />
