Added motors site

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 </div>
             </a>
 
-            <a href="#" class="letter" id="o" data-state="close" data-value="">
-                <div class="letter-inner" data-state="close" data-value="">
+            <a href="#" class="letter" id="o" data-state="close" data-value="https://diabgarren.github.io/motors/">
+                <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/motors/">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter O, Top Left" />
                     <img class="top-right" src="images/placeholder.webp" alt="Letter O, Top Right" />
                     <img class="bot-left" src="images/placeholder.webp" alt="Letter O, Bottom Left" />
