Updated resume and transcripts

--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,8 @@
     </header>
     <main>
         <div>
-            <img src="resume.png" alt="Resume">
+            <!-- <img src="resume.png" alt="Resume"> -->
+            <iframe src="resume.pdf" class="document"></iframe>
         </div>
     </main>
     <footer>
