Started updating colours

--- a/index.html
+++ b/index.html
@@ -40,10 +40,25 @@
             <a href="#" class="letter" id="m" data-state="close"
                 data-value="https://maevehuman.github.io/MyUGPortfolio/">
                 <div class="letter-inner" data-state="close" data-value="https://maevehuman.github.io/MyUGPortfolio/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter M, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter M, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter M, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter M, Bottom Right" />
+                    <svg class="top-left" width="86" height="107" viewBox="0 0 86 107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path class="top-left-inner" d="M12.5 0H0V107H11V21L60 107H72.5L12.5 0Z" fill="#D9D9D9" />
+                    </svg>
+
+                    <svg class="top-right" width="86" height="107" viewBox="0 0 86 107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path class="top-right-inner" d="M74 0H86V107H75V23L27 107H14L74 0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" width="86" height="107" viewBox="0 0 86 107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path class="bot-left-inner" d="M86 107H0V0H11V96H86V107Z" fill="#D9D9D9" />
+                        <path class="bot-left-inner" d="M81 38L60 0H72.5L86 24V38H81Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" width="86" height="107" viewBox="0 0 86 107" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path class="bot-right-inner" d="M0 107V96H75V0H86V107H0Z" fill="#D9D9D9" />
+                        <path class="bot-right-inner" d="M5 38H0V24L14 0H27L5 38Z" fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
@@ -51,10 +66,22 @@
                 data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
                 <div class="letter-inner" data-state="close"
                     data-value="https://diabgarren.github.io/wdd230/bountiful-foods/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter Y, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter Y, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter Y, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M11 0H0V5L67.7213 107H81.3947L11 0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner" d="M75 0H86V4L18.1707 107H4.60526L75 0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner" d="M67.7213 0L81 20V107H86V7L81.3947 0H67.7213Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner" d="M5 107H0V7L4.60526 0H18.1707L5 20V107Z" fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
@@ -79,10 +106,30 @@
 
             <a href="#" class="letter" id="o" data-state="close" data-value="https://diabgarren.github.io/motors/">
                 <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/motors/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter O, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter O, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter O, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter O, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner"
+                            d="M86 10V0H75C75 0 47.9702 0 23.2583 25.5C0 49.5 -1.52588e-05 77 -1.52588e-05 77L0.000500031 107H11V79C11 79 12 54.0763 32 32.5C52 10.9237 80 10 80 10H86Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner"
+                            d="M0 10V0H11C11 0 38.0298 0 62.7417 25.5C86 49.5 86 77 86 77L85.9995 107H75V79C75 79 74 54.0763 54 32.5C34 10.9237 6 10 6 10H0Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner"
+                            d="M86 97V107H75C75 107 47.9703 107 23.2583 81.5C1.52588e-05 57.5 0 30 0 30L0.00051529 7.62939e-06H11V28C11 28 12 52.9237 32 74.5C52 96.0763 80 97 80 97H86Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M0 97V107H11C11 107 38.0298 107 62.7417 81.5C86 57.5 86 30 86 30L85.9995 7.62939e-06H75V28C75 28 74 52.9237 54 74.5C34 96.0763 6 97 6 97H0Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
